<resources>
    <string name="app_name">HostelMkononi</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="existingUser">Already a Member ? Sign in here.</string>
    <string name="action_settings">Settings</string>
    <string name="action_privacy">Privacy Policy</string>
    <string name="email">Email </string>
    <string name="passowrd">Password</string>
    <string name="Login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="id_no">ID Number</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="not_having_account">Not Having an Account?</string>
    <string name="already_having_account">Already Having an Account?</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="log_in">Log In</string>

    <string name="sign_up">Sign Up</string>

    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">HostelMkononi</string>
    <string name="nav_header_subtitle">Hostel Service Provider</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="hostels">Hostels</string>
    <string name="notices">Notices</string>
    <string name="complaints">Complaints</string>
    <string name="privacy">Privacy</string>
    <string name="about">About</string>
    <string name="ask">Help</string>
    <string name="pay_room">Make Payment</string>
    <string name="types_of_cancer">Types of Cancer</string>
    <string name="stages_of_cancer">Stages of Cancer</string>
    <string name="donate">Donate</string>
    <string name="forum">Forum</string>
    <string name="action_logout">Logout</string>
    <string name="rooms">Rooms</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="catholic">Around the University.Only for Female gender. Monthly rent is Ksh 3000.Deposit is Ksh 2000</string>
    <string name="tamaal">Around DeKut.Two People in a room .Mixed gender.Monthly Rent is Ksh 4500 and Deposit of Kshs 2500.</string>
    <string name="classic">In Nyeri Town .Mixed gender. Monthly rent is Kshs 5000 and deposit of Ksh 2000</string>
    <string name="batian_hostel">Dekut hostel for female only . 4 per room and semester rent is Kshs 5000</string>
    <string name="mtkenya">Dekut hostel for male only .\n 4 per room and semester rent is Kshs 5000</string>
    <string name="embassy">  In embassy  along Nyahururu road.\n Monthly rent is Ksh 4000 and transport is Kshs 30</string>

</resources>
